<resources>
    <string name="app_name">会务平台</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="conf_sendup">会议发起</string>
    <string name="conf_title">会议标题:</string>
    <string name="conf_inputtitle">请输入会议标题</string>
    <string name="conf_inputdesc">请输入会议摘要</string>
    <string name="conf_desc">会议摘要:</string>
    <string name="conf_type">会议类型</string>
    <string name="conf_type_">会议类型:</string>
    <string name="conf_department">创建单位:</string>
    <string name="conf_address">会议地点</string>
    <string name="conf_conclusion">会议结论:</string>
    <string name="conf_jigoulevel">机构级别</string>
    <string name="conf_typename">类型名称</string>
    <string name="conf_starttime">起始时间</string>
    <string name="conf_endtime">终止时间</string>
    <string name="conf_workmeb">会务工作人员</string>
    <string name="conf_joinmeb">会务人员</string>
    <string name="conf_contromeb">控制人</string>
    <string name="conf_meettopic">议题</string>
    <string name="conf_accessmeb">审核人</string>
    <string name="conf_topic_list">议题列表</string>
    <string name="conf_choicetopic">选择议题</string>
    <string name="conf_newtopic">新建议题</string>
    <string name="conf_home_title">主   页</string>
    <string name="conf_detail_title">会议详情</string>
    <string name="conf_detail_timeupdate">时间变更</string>
    <string name="conf_detail_start">开始</string>
    <string name="conf_detail_dianming">点名</string>
    <string name="conf_detail_time">时间:</string>
    <string name="conf_detail_startVote">表决开始</string>
    <string name="conf_detail_voteResult">表决结果</string>
    <string name="conf_virtual_title">虚拟会议</string>
    <string name="vote_title_main">表决</string>
    <string name="conf_topic_tochoose">待选议题</string>
    <string name="conf_topic_haschoose">已选议题</string>
    <string name="conf_join_choose_member">人员选择</string>
    <string name="conf_change_title">会议变更</string>
    <string name="conf_member_change_success">会务工作人员变更成功</string>
    <string name="conf_member_change_fail">会务工作人员变更失败</string>
    <string name="conf_member_change_title">会务工作人员变更</string>
    <string name="conf_delete_topic_success">删除议题成功</string>
    <string name="conf_delete_topic_fail">删除议题失败</string>
    <string name="topic_member_change_success">议题人员变更成功</string>
    <string name="topic_member_change_fail">议题人员变更失败</string>
    <string name="topic_member_change_title">议题人员变更</string>
    <string name="conf_select_joinmember">请选择会议参会人</string>
    <string name="conf_select_joinmember_waitto">待选</string>
    <string name="conf_select_joinmember_has">已选</string>
    <string name="conf_select_joinmember_other">会务相关人员</string>
    <string name="conference_detail_creator">创建人：</string>
    <string name="conference_check_reason">请输入审核意见：</string>
    <string name="conference_check_reason_hint">同意此会议</string>
    <string name="conference_check_detail_title">会议审核</string>
    <string name="conference_public_reason">请输入发布意见：</string>
    <string name="conference_hint_title">提示：</string>
    <string name="conference_hint_detail">请进入议题列表控制议题</string>
    <string name="conference_status">会议状态：</string>
    <string name="conference_status_toupload">待上传</string>
    <string name="conference_status_tocheck">待审核</string>
    <string name="conference_status_checkpass">已审核</string>
    <string name="conference_status_checkreject">审核未通过</string>
    <string name="conference_status_topublish">待发布</string>
    <string name="conference_control">会议控制</string>
    <string name="conference_change">会议变更</string>
    <string name="conference_join">待我参加</string>
    <string name="conference_schedule">会议日程</string>
    <string name="conference_going">进行中</string>
    <string name="conference_publish">会议发布</string>
    <string name="conference_mystart">我发起的会议</string>
    <string name="conference_conclusion">请输入会议结论：</string>
    <string name="conference_conclusion_hint">此次会议...</string>
    <string name="conference_history">会议历史</string>
    <string name="conference_conclusion_2">请输入会议总结报告：</string>
    <string name="conf_conclusion_2">会议总结报告:</string>
    <string name="conf_finish_2">会议结束并归档</string>
    <string name="conference_going_biaojue">表决控制</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_save_password">记住密码</string>
    <string name="login_networkset_str">网络设置</string>
    <string name="charge_pwd_account">账号：</string>
    <string name="charge_pwd_verify">点击验证</string>
    <string name="charge_pwd_verify_code">验证码：</string>
    <string name="charge_pwd_new_pwd">新密码：</string>
    <string name="charge_pwd_new_pwd_again">再次确认：</string>
    <string name="charge_pwd_confirm">确认修改</string>
    <string name="register_account">手机号</string>
    <string name="register_new_pwd">设置密码</string>
    <string name="register_new_pwd_again">再次输入密码</string>
    <string name="register_identify_number">身份证号</string>
    <string name="register_org_number">机构代码</string>
    <string name="register_verify_code">验证码</string>
    <string name="login_voip_register_notice">收不到短信？请点击</string>
    <string name="login_voip_register">语音验证</string>
    <string name="vote_title">投   票</string>
    <string name="vote_vote">投 票</string>
    <string name="vote_agree">同意</string>
    <string name="vote_give_up">弃权</string>
    <string name="vote_unagree">反对</string>
    <string name="vote_people_num">人数</string>
    <string name="vote_people_unit">人</string>
    <string name="vote_card_unit">票</string>
    <string name="vote_type">表决类型：</string>
    <string name="anonymous_vote">匿名投票</string>
    <string name="real_name_vote">实名投票</string>
    <string name="do_vote">正在投票</string>
    <string name="attenders_count">到会人数：</string>
    <string name="attenders_unvote_count">到会的未投票人数：</string>
    <string name="upload_votes">正在提交投票</string>
    <string name="vote_avr_title">发起语音表决</string>
    <string name="votes_all">所有投票</string>
    <string name="voter_count">人数</string>
    <string name="vote_scene">现场投票</string>
    <string name="vote_mobile_app">手机客户端</string>
    <string name="vote_avr">语音投票</string>
    <string name="vote_pc">电脑客户端</string>
    <string name="vote_all_people_count">要投票的总人数：</string>
    <string name="topic_dianming">点  名</string>
    <string name="topic_dianming_chuxi">出席</string>
    <string name="topic_dianming_weichuxi">缺席</string>
    <string name="topic_dianming_qingjia">请假</string>
    <string name="today_schedule_title">日程</string>
    <string name="today_schedule_detail">日程详情</string>
    <string name="vote_manager_titlev">表   决</string>
    <string name="unarrival_title">未  到</string>
    <string name="unarrival_tel_msg">短信提醒</string>
    <string name="unarrival_tel_void">语音提醒</string>
    <string name="con_my_con_time_title">时间变更</string>
    <string name="con_my_con_time_start">起止时间</string>
    <string name="con_my_con_time_end">终止时间</string>
    <string name="con_my_con_time_pre">提前</string>
    <string name="con_my_con_time_delay">延后</string>
    <string name="con_my_con_time_hour">小时</string>
    <string name="con_my_con_time_minute">分钟</string>
    <string name="test_login_account">admin</string>
    <string name="test_login_pwd">147369</string>
    <string name="test_arrival_name">提议需要尽快调，请尽快投票</string>
    <string name="test_vote_name">五悟空</string>
    <string name="test_today_schedule_title">五悟空。。。。。......</string>
    <string name="test_today_schedule_keys">摘要:</string>
    <string name="test_today_schedule_address">地点:</string>
    <string name="test_today_schedule_value">五悟空   猴子</string>
    <string name="test_today_schedule_time">2014-08-31——2014-09-01</string>
    <string name="test_today_schedule_month">8月25</string>
    <string name="test_today_schedule_title_two">议题二</string>
    <string name="topic_detail_title_draft">草案详情</string>
    <string name="topic_detail_title">议题详情</string>
    <string name="topic_detail_desc">议题摘要:</string>
    <string name="topic_detail_keyword">关键词:</string>
    <string name="topic_detail_startTime">发起日期:</string>
    <string name="topic_detail_endTime">截止日期:</string>
    <string name="topic_detail_accesspepole">建议审核人:</string>
    <string name="topic_detail_controllpepole">议定人:</string>
    <string name="topic_detail_topicresult">议题结论:</string>
    <string name="topic_detail_timeupdate">时间变更</string>
    <string name="topic_detail_start">开始</string>
    <string name="topic_detail_dianming">点名</string>
    <string name="topic_detail_startvote">开始表决</string>
    <string name="topic_detail_avr_vote">发起语音表决</string>
    <string name="topic_detail_dovote">表决</string>
    <string name="topic_detail_voteresult">表决结果</string>
    <string name="topic_detail_endvote">结束表决</string>
    <string name="topic_house_title">议题草案库</string>
    <string name="topic_house_todayAdd">今日新增</string>
    <string name="topic_house_historytopic">历史议题</string>
    <string name="topic_house_topickeywords">议题关键字:</string>
    <string name="topic_house_topicdesc">议题内容...</string>
    <string name="topic_house_topictime">2014-08-09-7:30---2014-08-09-9:30</string>
    <string name="topic_main_title">议   题</string>
    <string name="topic_db_search_hint">请输入要搜索的内容</string>
    <string name="topic_newtopic">议题草案</string>
    <string name="topic_title">议题标题:</string>
    <string name="topic_inputtitle">请输入议题标题</string>
    <string name="topic_inputdesc">请输入议题内容</string>
    <string name="topic_desc">议题内容:</string>
    <string name="topic_type">议题类型</string>
    <string name="topic_jigoulevel">机构级别</string>
    <string name="topic_typename">类型名称</string>
    <string name="topic_caoan_title">议题草案标题:</string>
    <string name="topic_caoan_desc">议题草案内容:</string>
    <string name="topic_caoan_inputtitle">请输入议题草案标题</string>
    <string name="topic_caoan_inputdesc">请输入议题草案内容</string>
    <string name="topic_my_topic_title">我的提案</string>
    <string name="topic_online">已提交</string>
    <string name="topic_local">待提交</string>
    <string name="topic_starttime_note">建议开始时间</string>
    <string name="topic_endtime_note">建议结束时间</string>
    <string name="topic_starttime">起始时间</string>
    <string name="topic_endtime">终止时间</string>
    <string name="topic_targetdepartment">目标单位</string>
    <string name="topic_joinmember">建议议定人</string>
    <string name="topic_joingroup">选择群组</string>
    <string name="topic_applicatemember">审核人</string>
    <string name="topic_accessmember">列席人人</string>
    <string name="topic_detail_creator">创建人：</string>
    <string name="topic_check_reason">请输入审核意见：</string>
    <string name="topic_check_reason_hint">同意，议题还是不错的</string>
    <string name="topic_check_detail_title">议题审核</string>
    <string name="topic_upload">立即提交</string>
    <string name="topic_save">保存草稿</string>
    <string name="topic_pre">上一步</string>
    <string name="topic_addthree_starttime">发起日期：</string>
    <string name="topic_addthree_endtime">截止日期：</string>
    <string name="topic_addthree_targetdepartment">目标单位：</string>
    <string name="topic_addthree_joinmember">建议议定人：</string>
    <string name="topic_addthree_kewords">关键字：</string>
    <string name="topic_editthree_edit">编辑完成</string>
    <string name="topic_status">状态：</string>
    <string name="job_check_topic">待我审核的议题：</string>
    <string name="job_check_meet">待我审核的会议：</string>
    <string name="job_ctrl_topic">待我控制的议题：</string>
    <string name="job_publish_meet">待我发布的会议：</string>
    <string name="job_ctrl_meet">待我控制的会议：</string>
    <string name="job_attend_meet">待我参加的会议：</string>
    <string name="job_vote">待我表决的议题：</string>
    <string name="topic_edit">议题编辑</string>
    <string name="topic_is_vote">是否表决</string>
    <string name="topic_is_meetcall">是否开电话会议</string>
    <string name="topic_vote_withname">记名</string>
    <string name="topic_vote_withoutname">匿名</string>
    <string name="topic_vote_novote_abstain">未投票是否视为弃权(勾选了视为弃权)</string>
    <string name="topic_wait_my_handle_title">待办工作</string>
</resources>