<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_vote_name"
        android:layout_width="0dip"
        android:layout_height="40dip"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_weight="1.0"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/test_vote_name"
        android:textColor="@color/bg_red"
        android:textSize="@dimen/textsize_18" />
	
    <RadioGroup
        android:id="@+id/vote_manager"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_marginRight="@dimen/margin_16"

        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
			android:id="@+id/vote_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_weight="1.0"
            android:button="@drawable/selector_vote_agree"
            android:text="@string/vote_agree" />

        <RadioButton
            android:id="@+id/vote_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_weight="1.0"
            android:button="@drawable/selector_vote_unagree"
            android:text="@string/vote_unagree" />

        <RadioButton
            android:id="@+id/vote_giveup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@drawable/selector_vote_give_up"
            android:text="@string/vote_give_up" />
    </RadioGroup>

</LinearLayout>