<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_dianming_name"
        android:layout_width="100dip"
        android:layout_height="50dip"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"

        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/topic_dianming"
        android:textColor="@color/bg_red"
        android:textSize="@dimen/textsize_18" />

    <RadioGroup
        android:id="@+id/rg_diming"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:layout_marginRight="@dimen/margin_4"        
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/topic_dianming_chuxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_weight="1.0"
            android:button="@drawable/selector_vote_agree"
            android:text="@string/topic_dianming_chuxi" />

        <RadioButton
            android:id="@+id/topic_dianming_weichuxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_weight="1.0"
            android:button="@drawable/selector_vote_unagree"
            android:text="@string/topic_dianming_weichuxi" />

        <RadioButton
            android:id="@+id/topic_dianming_qingjia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:button="@drawable/selector_vote_give_up"
            android:text="@string/topic_dianming_qingjia" />
    </RadioGroup>

</LinearLayout>