<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_red" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:background="@drawable/back"
            android:onClick="clickBackToFormer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/topic_edit"
            android:textColor="#FFF"
            android:textSize="@dimen/textsize_18" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/conf_sendup_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic_title"
                        android:textColor="@color/bg_red"
                        android:textSize="@dimen/textsize_16" />

                    <EditText
                        android:id="@+id/et_keywords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/conf_ettitle_bg"
                        android:gravity="top"
                        android:hint="@string/topic_inputtitle"
                        android:padding="4dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic_desc"
                        android:textColor="@color/bg_red"
                        android:textSize="@dimen/textsize_16" />

                    <EditText
                        android:id="@+id/et_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:background="@drawable/conf_etdesc_bg"
                        android:gravity="top"
                        android:hint="@string/topic_inputdesc"
                        android:padding="4dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <CheckBox
                    android:id="@+id/cb_is_meetcall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topic_is_meetcall"
                    android:textColor="@color/bg_red" />

                <CheckBox
                    android:id="@+id/cb_is_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topic_is_vote"
                    android:textColor="@color/bg_red" />

                <LinearLayout
                    android:id="@+id/ll_vote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <RadioGroup
                        android:id="@+id/rg_vote_type"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <RadioButton
                            android:id="@+id/rg_rb1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@null"
                            android:drawableLeft="@android:drawable/btn_radio"
                            android:text="@string/topic_vote_withname"
                            android:textColor="@color/bg_green"
                            />
                        <RadioButton
                            android:id="@+id/rg_rb2"
                            android:layout_width="fill_parent"
                            android:layout_height="50dip"
                            android:button="@null"
                            android:drawableLeft="@android:drawable/btn_radio"
                            android:text="@string/topic_vote_withoutname"
                            android:textColor="@color/bg_green"
  						 />
                    </RadioGroup>

                    <CheckBox
                        android:id="@+id/cb_is_abstain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic_vote_novote_abstain"
                        android:textColor="@color/bg_green" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:background="@drawable/conf_next"
                android:onClick="clickNext" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>