<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_green" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_16"
            android:background="@drawable/back"
            android:onClick="clickBackToFormer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/topic_wait_my_handle_title"
            android:textColor="#FFF"
            android:textSize="@dimen/textsize_18" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/refresh"
            android:onClick="clickRefresh" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_check_topic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/topichouse_title_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clickCheckTopic"
                android:text="@string/job_check_topic"
                android:textColor="#fff"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tv_ctrl_topic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/topichouse_title_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clickCtrlTopic"
                android:text="@string/job_ctrl_topic"
                android:textColor="#fff"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tv_check_meet"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/topichouse_title_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clickCheckMeet"
                android:text="@string/job_check_meet"
                android:textColor="#fff"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tv_publish_meet"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/topichouse_title_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clickPublishMeet"
                android:text="@string/job_publish_meet"
                android:textColor="#fff"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tv_ctrl_meet"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/topichouse_title_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clickCtrlMeet"
                android:text="@string/job_ctrl_meet"
                android:textColor="#fff"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tv_attend_meet"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/topichouse_title_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clickAttendMeet"
                android:text="@string/job_attend_meet"
                android:textColor="#fff"
                android:textSize="@dimen/textsize_16" />

            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/topichouse_title_bg"
                android:clickable="true"
                android:gravity="center"
                android:onClick="clickVote"
                android:text="@string/job_vote"
                android:textColor="#fff"
                android:textSize="@dimen/textsize_16" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>