<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
     >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24" >

        <ImageButton
            android:id="@+id/ibtn_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/ibtn_login_register"
            android:contentDescription="@null" />

        <ImageButton
            android:id="@+id/ibtn_login_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/ibtn_login_forget_pwd"
            android:contentDescription="@null" />
    </FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/iv_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_weight="6.09"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_login_account"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/editText_height"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@drawable/et_login_login_bg"
            android:drawableLeft="@drawable/et_login_account_icon"
            android:hint="@string/login_username_hint"
            android:maxLength="50"
            android:paddingLeft="@dimen/margin_4"
            android:singleLine="true"
            android:text="@string/test_login_account" />

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/editText_height"
            android:background="@drawable/et_login_login_bg"
            android:drawableLeft="@drawable/et_login_pwd_icon"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="@dimen/margin_4"
            android:singleLine="true"
            android:text="@string/test_login_pwd" />

       <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:background="@drawable/ibtn_login_checklayoutbg"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_save_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/login_save_password"
                android:textColor="#EEEEEE" 
                android:gravity="center"
                />


             <TextView
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:background="@color/white" />

        <TextView
            android:id="@+id/cb_network_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_32"
            android:singleLine="true"
            android:gravity="right"
            android:text="@string/login_networkset_str"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_16" 
            android:clickable="true"
            android:onClick="clickNetworkSetting"
            />
        </LinearLayout>
        
        <ImageButton
            android:id="@+id/ibtn_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/ibtn_login_login"
            android:contentDescription="@null" />



    </LinearLayout>

</LinearLayout>